--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/",
-    "deploy": "sh deploy.sh"
+    "format": "prettier --write src/"
   },
   "dependencies": {
     "vue": "^3.3.4",
