--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "vite-plugin-require": "^1.1.10",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
